--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,7 +2,7 @@ extends base
 include mixins/video
 
 block content 
-    each i in videos
-        +video(i)
+    each video in videos
+        +videoInfo(video)
     else 
         li Sorry nothing found.
