--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -1,6 +1,11 @@
 extends base
+include mixins/video
 
 block content
     form(method="GET")
-        input(name="keyword", placeholder="Search by title", type="text")
+        input(name="keyword", placeholder="Search by title", type="text", required)
         input(type="submit", value="Search Now")
+
+    div
+        each video in videos
+            +videoInfo(video)
