--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -9,7 +9,7 @@ block content
         input(name="password", placeholder="Password", type="password", required)
         input(type="submit", value="Login")
         br
-        a(href="https://github.com/login/oauth/authorize?client_id=8a2fab23ce7ded380722") Continue with Github &rarr;
+        a(href="/users/github/start") Continue with Github &rarr;
     hr
     div
         span Don't have an account? 
