--- a/src/views/users/change-password.pug
+++ b/src/views/users/change-password.pug
@@ -1,8 +1,10 @@
 extends ../base
 
 block content
+    if errorMessage
+        span=errorMessage
     form(method="POST")
-        input(placeholder="Old Password")
-        input(placeholder="New Password")
-        input(placeholder="New Password Confirmation")
+        input(name="oldPassword", type="password", placeholder="Old Password")
+        input(name="newPassword", type="password", placeholder="New Password")
+        input(name="newPassword2", type="password", placeholder="New Password Confirmation")
         input(value="Change Password" type="submit")
