--- a/src/views/users/edit-profile.pug
+++ b/src/views/users/edit-profile.pug
@@ -3,7 +3,9 @@ extends ../base
 block content
     if errorMessage
         span=errorMessage
-    form(method="POST")
+    form(method="POST", enctype="multipart/form-data")
+        label(for="avatar") Avatar
+        input(name="avatar", type="file", id="avatar", accept="image/*")
         input(name="name", placeholder="Name", type="text", required, value=loggedInUser.name)
         input(name="email", placeholder="Email", type="email", required, value=loggedInUser.email)
         input(name="username", placeholder="Username", type="text", required, value=loggedInUser.username)
