--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,5 +1,8 @@
 extends ../base
+include ../mixins/video
 
 block content
-    h1 hello
-    
+    each video in videos
+        +videoInfo(video)
+    else
+        li Sorry nothing found.
