--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -2,7 +2,8 @@ extends ../base
 include ../mixins/video
 
 block content
-    each video in videos
+    each video in user.videos
         +videoInfo(video)
     else
         li Sorry nothing found.
+        
