--- a/src/views/videos/watch.pug
+++ b/src/views/videos/watch.pug
@@ -7,8 +7,12 @@ block content
         small=video.createdAt
     div
         small Uploaded by 
-            a(href=`/users/${video.owner._id}`)=video.owner.name
-    if String(video.owner._id) === loggedInUser._id
-        a(href=`${video.id}/edit`) Edit Video &rarr;
-        br
-        a(href=`${video.id}/delete`) Delete Video &rarr;
+            if (video.owner)
+                a(href=`/users/${video.owner._id}`)=video.owner.name
+            else
+                small Unknown
+    if (video.owner)
+        if String(video.owner._id) === String(loggedInUser._id)
+            a(href=`${video.id}/edit`) Edit Video &rarr;
+            br
+            a(href=`${video.id}/delete`) Delete Video &rarr;
