--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -5,11 +5,15 @@
 // Components
 
 @import "./components/header.scss";
+@import "./components/footer.scss";
+@import "./components/video.scss";
+@import "./components/shared.scss";
 
 // Screens
 
-// Defaults
+@import "./screens/search.scss";
 
+// Defaults
 a {
   color: inherit;
   text-decoration: none;
@@ -20,4 +24,11 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: $bg;
   color: white;
+}
+
+main {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
