--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,10 +1,11 @@
 mixin videoInfo(video)
-    div
-        h4
-            a(href=`/videos/${video.id}`)=video.title
-        p=video.description
-        ul
-            each hashtag in video.hashtags
-                li=hashtag
-        small=video.createdAt
-        hr
+    a(href=`/videos/${video.id}`).video-mixin
+        div.video-mixin__thumb
+        div.video-mixin__data
+            span.video-mixin__title=video.title
+            div.video-mixin__meta
+                if video.owner
+                    span #{video.owner.name} • 
+                else
+                    span Unknown • 
+                span #{video.meta.views}회
