--- a/src/views/users/edit-profile.pug
+++ b/src/views/users/edit-profile.pug
@@ -3,9 +3,7 @@ extends ../base
 block content
     if errorMessage
         span=errorMessage
-    if loggedInUser.avatarUrl
-        img(src="/" + loggedInUser.avatarUrl, width="100", height="100")
-    form(method="POST", enctype="multipart/form-data")
+    form(method="POST", enctype="multipart/form-data").edit-profile__form
         label(for="avatar") Avatar
         input(name="avatar", type="file", id="avatar", accept="image/*")
         input(name="name", placeholder="Name", type="text", required, value=loggedInUser.name)
@@ -14,5 +12,5 @@ block content
         input(name="location", placeholder="Location", type="text", required, value=loggedInUser.location)
         input(type="submit", value="Update Profile")
         if !loggedInUser.socialOnly
-            hr
-            a(href="change-password") Change Password &rarr;
+            div.edit-profile__password
+                a(href="change-password") Change Password &rarr;
