--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -2,8 +2,16 @@ extends ../base
 include ../mixins/video
 
 block content
-    each video in user.videos
-        +videoInfo(video)
-    else
-        li Sorry nothing found.
+    div.profile__data
+        if loggedInUser.avatarUrl
+            if loggedInUser.socialOnly
+                img(src=loggedInUser.avatarUrl).avatar
+            else
+                img(src="/" + loggedInUser.avatarUrl).avatar
+        h3=user.name
+    div.video-grid
+        each video in user.videos
+            +videoInfo(video)
+        else
+            span.empty__message No videos found.
         
