--- a/src/client/scss/components/shared.scss
+++ b/src/client/scss/components/shared.scss
@@ -14,8 +14,9 @@
     text-decoration: underline;
   }
 }
-.avatar {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
+
+label {
+  font-size: 14px;
+  margin-bottom: 10px;
+  display: block;
 }
