--- a/src/views/videos/watch.pug
+++ b/src/views/videos/watch.pug
@@ -2,17 +2,21 @@ extends ../base.pug
 
 block content 
     video(src="/" + video.fileUrl, controls)
-    div
-        p=video.description
-        small=video.createdAt
-    div
-        small Uploaded by 
-            if (video.owner)
-                a(href=`/users/${video.owner._id}`)=video.owner.name
-            else
-                small Unknown
-    if (video.owner)
-        if String(video.owner._id) === String(loggedInUser._id)
-            a(href=`${video.id}/edit`) Edit Video &rarr;
-            br
-            a(href=`${video.id}/delete`) Delete Video &rarr;
+    //-
+        div
+            p=video.description
+            small=video.createdAt
+        div
+            small Uploaded by 
+                if (video.owner)
+                    a(href=`/users/${video.owner._id}`)=video.owner.name
+                else
+                    small Unknown
+        if (video.owner)
+            if String(video.owner._id) === String(loggedInUser._id)
+                a(href=`${video.id}/edit`) Edit Video &rarr;
+                br
+                a(href=`${video.id}/delete`) Delete Video &rarr;
+
+block scripts
+    script(src="../static/js/videoPlayer.js")
