--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,6 +4,7 @@ html(lang="ko")
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css")
         link(rel="stylesheet", href="/static/css/styles.css")
+        link(rel="shortcut icon", href="#")
     body 
         include partials/header
         main
