--- a/src/views/videos/watch.pug
+++ b/src/views/videos/watch.pug
@@ -1,7 +1,7 @@
 extends ../base.pug
 
 block content 
-    div#videoContainer.videoContainer
+    div#videoContainer.videoContainer(data-id=video._id)
         video(src="/" + video.fileUrl).screen
         div#videoControls.videoControls
             div.videoControls__timeline
