--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -15,13 +15,13 @@ header
                     a(href="/users/logout") Log Out
                 li 
                     a(href=`/users/${loggedInUser._id}`)
-                        if loggedInUser.avatarUrl === ""
+                        if !loggedInUser.avatarUrl
                             span 😃
                         else
                             if loggedInUser.socialOnly
-                                img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                                img.header__avatar(src="http://localhost:4000/" + loggedInUser.avatarUrl, crossorigin)
                             else
-                                img.header__avatar(src="/" + loggedInUser.avatarUrl, crossorigin)
+                                img.header__avatar(src="http://localhost:4000/" + loggedInUser.avatarUrl, crossorigin)
 
             else
                 li 
