--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -5,9 +5,9 @@ block content
     div.profile__data
         if loggedInUser.avatarUrl
             if loggedInUser.socialOnly
-                img(src=loggedInUser.avatarUrl).avatar
+                img.avatar(src="http://localhost:4000/" + loggedInUser.avatarUrl, crossorigin)
             else
-                img(src="/" + loggedInUser.avatarUrl).avatar
+                img.avatar(src="http://localhost:4000/" + loggedInUser.avatarUrl, crossorigin)
         h3=user.name
     div.video-grid
         each video in user.videos
