--- a/src/views/videos/watch.pug
+++ b/src/views/videos/watch.pug
@@ -31,9 +31,9 @@ block content
                 small Unknown
         small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: "long", year: "numeric", month: "long", day: "numeric"})
         if String(video.owner._id) === String(loggedInUser._id)
-            a(href=`${video.id}/edit`) Edit Video &rarr;
+            a(href=`${video._id}/edit`) Edit Video &rarr;
             br
-            a(href=`${video.id}/delete`) Delete Video &rarr;
+            a(href=`${video._id}/delete`) Delete Video &rarr;
 
     if loggedIn
         div.video__add-comments
@@ -44,10 +44,11 @@ block content
     div.video__comments
         ul
             each comment in video.comments.reverse()
-                li.video__comment
+                li#videoComment.video__comment
                     i.fas.fa-comment
                     span  #{comment.text}
-                    span ❌
+                    if String(comment.owner) === String(loggedInUser._id) 
+                        span.video__comment-delete#deleteCommentBtn(data-id=comment._id)(data-videoId=video._id) ❌
 
 block scripts
     script(src="../static/js/videoPlayer.js")
