--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -4,10 +4,8 @@ include ../mixins/video
 block content
     div.profile__data
         if loggedInUser.avatarUrl
-            if loggedInUser.socialOnly
-                img.avatar(src="http://localhost:4000/" + loggedInUser.avatarUrl, crossorigin)
-            else
-                img.avatar(src="http://localhost:4000/" + loggedInUser.avatarUrl, crossorigin)
+            img.avatar(src="../" + loggedInUser.avatarUrl)
+
         h3=user.name
     div.video-grid
         each video in user.videos
