--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -4,7 +4,10 @@ include ../mixins/video
 block content
     div.profile__data
         if loggedInUser.avatarUrl
-            img.avatar(src="../" + loggedInUser.avatarUrl)
+            if loggedInUser.socialOnly
+                img.header__avatar(src=loggedInUser.avatarUrl)
+            else
+                img.header__avatar(src="/" + loggedInUser.avatarUrl)
 
         h3=user.name
     div.video-grid
