--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -1,4 +1,4 @@
-extends ../base
+extends base
 
 
 block content
@@ -12,7 +12,7 @@ block content
         input(name="password2", placeholder="Confirm Password", type="password", required)
         input(name="location", placeholder="Location", type="text", required)
         input(type="submit", value="Join")
-        include ../partials/social-login
+        include partials/social-login
     div.auth-switch
         span Already have an account? 
         a(href="/login") Log in now &rarr;
