--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,4 +1,4 @@
-extends ../base
+extends base
 
 
 block content
@@ -8,7 +8,7 @@ block content
         input(name="username", placeholder="Username", type="text", required)
         input(name="password", placeholder="Password", type="password", required)
         input(type="submit", value="Login")
-        include ../partials/social-login
+        include partials/social-login
     div.auth-switch
         span Don't have an account? 
         a(href="/join") Create one now &rarr;
