--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,10 +18,8 @@ header
                         if loggedInUser.avatarUrl === ""
                             span 😃
                         else
-                            if loggedInUser.socialOnly
+                            if loggedInUser.avatarUrl
                                 img.header__avatar(src=loggedInUser.avatarUrl)
-                            else
-                                img.header__avatar(src="/" + loggedInUser.avatarUrl)
 
 
             else
