--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -19,9 +19,9 @@ header
                             span 😃
                         else
                             if loggedInUser.avatarUrl.includes("github")
-                                img.header__avatar(src=loggedInUser.avatarUrl, crossorigin="use-credentials")
+                                img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
                             else 
-                                img.header__avatar(src="/" + loggedInUser.avatarUrl, crossorigin="use-credentials")
+                                img.header__avatar(src="/" + loggedInUser.avatarUrl, crossorigin)
 
 
             else
