--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,7 +2,7 @@ extends base.pug
 
 block content 
     div#videoContainer.videoContainer(data-id=video._id)
-        video(src="/" + video.fileUrl).screen
+        video(src=video.fileUrl, crossorigin).screen
         div#videoControls.videoControls
             div.videoControls__timeline
                 input(type="range", step="1", value=0, min="0")#timeline
