--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -1,9 +1,9 @@
-extends ../base
-include ../mixins/video
+extends base
+include mixins/video
 
 block content
     div.profile__data
-        img.avatar(src=user.avatarUrl, crossorigin)
+        img.avatar(src="../"+user.avatarUrl, crossorigin)
         h3=user.name
     div.video-grid
         each video in user.videos
