--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,7 +18,10 @@ header
                         if loggedInUser.avatarUrl === ""
                             span 😃
                         else
-                            img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                            if isHeroku
+                                img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                            else
+                                img.header__avatar(src="../"+loggedInUser.avatarUrl, crossorigin)
 
 
             else
