--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -3,7 +3,10 @@ include mixins/video
 
 block content
     div.profile__data
-        img.avatar(src=user.avatarUrl, crossorigin)
+        if isHeroku
+            img.avatar(src=user.avatarUrl, crossorigin)
+        else    
+            img.avatar(src="../"+user.avatarUrl, crossorigin)
         h3=user.name
     div.video-grid
         each video in user.videos
